# deskPulse

./: .gitignore  DEVELOPMENT.md  README.md  SPEC.md  package-lock.json  package.json  竞品分析.md
src/: fullscreen.html  fullscreen.html.bak  fullscreen_fixed.html  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  config.rs  crypto.rs  idle.rs  lib.rs  tray.rs  water.rs
